Minor fixes (i.e. spacing issue in landing page grid)

--- a/src/route/landing/landing.module.scss
+++ b/src/route/landing/landing.module.scss
@@ -3,7 +3,7 @@
     overflow: hidden;
 
     display: grid;
-    grid-template-rows: 35% 25% 5% 35%;
+    grid-template-rows: 37.5% 25% 37.5%;
     grid-template-columns: 100%;
 
     header {
@@ -18,8 +18,8 @@
         grid-column: 1 / 2;
 
         z-index: 1;
-        width: 25vw;
 
+        width: 25vw;
         justify-self: center;
     }
     
